# star-coach

./: .gitignore  DISTRIBUTION.md  MANIFEST.in  README.md  example_star.org  homebrew-formula.rb  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  star_coach_standalone.py
.github/workflows/: release.yml
Formula/: star-coach.rb
homebrew-tap/: README.md  star-coach.rb
star_coach/: __init__.py  cli.py  example_star.org
star_coach.egg-info/: SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
star_coach/tests/: __init__.py  test_parse.py
venv-fresh/: pyvenv.cfg
